# databricks-utility

./: .gitignore  README.md  pyproject.toml
databricks_utility/: __main__.py
databricks_utility/cluster/: create_cluster.py
databricks_utility/databricks_sql_connection_template/: connect.py  test_connect.py
databricks_utility/helper/: databricks_connection.py
databricks_utility/identity/: get_service_principal_id.py  service_principal_id_to_name.py
databricks_utility/sql_statement/: get_data_sources.py  sql.py
databricks_utility/unity_grants/: get_external_location_grant.py  get_table_grant.py
databricks_utility/unity_table/: create_table.py  delete_table.py  get_table_grant.py
